header Related terms to L4, script template -ARchar +Arab, script template -FAchar +fa-Arab, sorted/rebalanced translations <substance#4496468>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -24,17 +24,17 @@ From {{OF.}} ''[[#French|substance]]''.
 * Dutch: {{t+|nl|substantie|f}}
 * Finnish: {{t+|fi|aine}}, {{t+|fi|materia}}
 * French: {{t+|fr|substance|f}}
-* Hebrew: {{he-translation|חומר|khómer}} {{m}}
-* Hungarian: {{t|hu|anyag}}, {{t|hu|tartalom}}
 * German: {{t+|de|Substanz|f}}
 * Greek: [[ουσία]] (usia) {{f}}
-* Latvian: [[viela]] {{f}}
+* Hebrew: {{he-translation|חומר|khómer}} {{m}}
+* Hungarian: {{t|hu|anyag}}, {{t|hu|tartalom}}
 {{trans-mid}}
 * Japanese: {{t+|ja|物質|tr=busshitsu|sc=Jpan}}
+* Latvian: [[viela]] {{f}}
 * Norwegian: [[substans]] {{m}}, [[masse]] {{m}}
 * Polish: {{t+|pl|substancja|f}}
-* Russian: {{t+|ru|вещество|n|tr=veščestvó|sc=Cyrl}}
 * Portuguese: {{t+|pt|substância|f}}
+* Russian: {{t+|ru|вещество|n|tr=veščestvó|sc=Cyrl}}
 * Swedish: [[ämne]] {{n}}, [[substans]] {{c}}
 * [[Telugu]]: [[పదార్థము]] (padaarthamu)
 * Turkish: {{t+|tr|madde}}
@@ -47,8 +47,8 @@ From {{OF.}} ''[[#French|substance]]''.
 * German: {{t+|de|Substanz|f}}
 * Greek: [[ουσιώδης]] (usiodes) {{m}}
 * Hebrew: {{he-translation|תוכן|tókhen}} {{m}}
-* Hungarian: {{t|hu|lényeg}}
 {{trans-mid}}
+* Hungarian: {{t|hu|lényeg}}
 * Japanese: {{t|ja|骨子|tr=kosshi|sc=Jpan}}
 * Norwegian: [[substans]] {{m}}
 * Portuguese: {{t+|pt|substância|f}}
@@ -60,9 +60,9 @@ From {{OF.}} ''[[#French|substance]]''.
 * Dutch: [[kern]], [[essentie]] {{f}}
 * German: {{t+|de|Substanz|f}}
 * Greek: [[ουσία]] (usia) {{f}}
+{{trans-mid}}
 * Hebrew: {{he-translation|מהות|mahút}} {{f}}
 * Norwegian: [[essens]] {{m}}, [[kjerne]] {{m}}
-{{trans-mid}}
 * Portuguese: {{t+|pt|substância|f}}
 * Swedish: [[substans]] {{c}}
 {{trans-bottom}}
@@ -91,7 +91,7 @@ From {{OF.}} ''[[#French|substance]]''.
 
 {{checktrans-top}}
 * {{ttbc|Albanian}}: [[lëndë]]
-* {{ttbc|Arabic}}: {{ARchar|[[مادة]]}} (mádda) {{f}}
+* {{ttbc|Arabic}}: {{Arab|[[مادة]]}} (mádda) {{f}}
 * {{ttbc|Azeri}}: [[maddə]]
 * {{ttbc|Bulgarian}}: [[вещество]] (vešestvo) {{n}}
 * {{ttbc|Chinese}}: [[物質]], [[物质]] (wùzhí)
@@ -105,7 +105,7 @@ From {{OF.}} ''[[#French|substance]]''.
 * {{ttbc|Korean}}: [[실체]] (silche), [[물질]] (muljil)
 * {{ttbc|Lithuanian}}: [[turinys]]
 * {{ttbc|Middle English}}: [[substaunce]]
-* {{ttbc|Persian}}: {{FAchar|[[خلاصه]]}} (kholâseh)
+* {{ttbc|Persian}}: {{fa-Arab|[[خلاصه]]}} (kholâseh)
 * {{ttbc|Polish}}: [[istota]] {{f}}
 * {{ttbc|Romanian}}: [[substanţă]] {{f}}
 * {{ttbc|Slovak}}: [[hmota]] {{f}}
@@ -117,7 +117,7 @@ From {{OF.}} ''[[#French|substance]]''.
 * {{ttbc|Yiddish}}: [[מאַטעריע]] (materye)
 {{checktrans-bottom}}
 
-===Related terms===
+====Related terms====
 * [[stand under]]
 * [[subsist]]
 * [[substantial]]
@@ -134,7 +134,7 @@ From {{OF.}} ''[[#French|substance]]''.
 From {{L.}} ''[[substantia]]'', '''substance''' or '''essence''', noun form from present participle ''[[substans]]'', from ''[[substare]]'', '''[[exist]]''', lit. '''stand under''', from ''[[stare]]'', '''[[stand]]'''
 
 ===Pronunciation===
-*{{audio|Fr-substance.ogg|audio}}
+* {{audio|Fr-substance.ogg|audio}}
 
 ===Noun===
 {{fr-noun|f}}
