--- a/en/惸/惸.15628.wikitext
+++ b/en/惸/惸.15628.wikitext
@@ -1,30 +1,50 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=9704<sub>7</sub>|canj=心心日木 (PPAD)}}
+
 # [[troubled]], [[worried]], [[distressed]]
+
 ====References====
-{{Han ref|kx=0392.340|dkj=10865|dj=0728.170|hdz=42330.080|uh=60F8|ud=24824|bh=D946|bd=55622}}
+* {{Han ref|kx=0392.340|dkj=10865|dj=0728.170|hdz=42330.080|uh=60F8|ud=24824|bh=D946|bd=55622}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=king4}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[けい]] (kei), [[ぎょう]] (gyō)|kun=[[うれえる]] (ureeru)}}
+* {{ja-readings|on=[[けい]] (kei), [[ぎょう]] (gyō)|kun=[[うれえる]] (ureeru)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=경|eumhun=|rv=gyeong|mr=kyŏng|y=kyeng}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[qióng]] ([[qiong2]])|wg=ch'iung<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:惸]]
