cs iw added <Israel#4504303>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -154,6 +154,7 @@ Originally from {{He.}} ''[[ישראל]]'', the name "Israel" is rooted in the [
 
 [[ar:Israel]]
 [[bg:Israel]]
+[[cs:Izrael]]
 [[de:Israel]]
 [[et:Israel]]
 [[el:Israel]]
