Conform to new categories <Germany#4504821>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -33,7 +33,7 @@
 * Faroese: [[Týskland]] {{n}}
 * Finnish: [[Saksa]]
 * French: [[Allemagne]] {{f}}
-* [[Frisian]]: [[Dútslân]] {{n}}
+* [[West Frisian]]: [[Dútslân]] {{n}}
 * German: [[Deutschland]] {{n}}
 *: Middle High German: [[Tiutschlant]] {{n}}
 * Greek: [[Γερμανία]] (Germanía) {{f}}
