--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -25,7 +25,7 @@
 * Esperanto: [[testudo]]
 * Finnish: [[kilpikonna]]
 * French: [[tortue]] {{f}}
-* [[Frisian]]: [[skyldpod]]
+* [[West Frisian]]: [[skyldpod]]
 * German: [[Schildkröte]] {{f}}
 * Hungarian: [[teknősbéka]], [[teknős]]
 * Indonesian: [[kura-kura]]
