--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -1,5 +1,8 @@
 ==Hebrew==
 
+===Etymology===
+From {{proto|Semitic|ʾarṣ́-|lang=he}}.
+
 ===Noun===
 '''ארץ''' (éretz) {{f}}, [[ארצות]] (artzót) {{p}}
 
