/* Translations */  + rfc-auto test <curve#4509856>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -87,7 +87,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Slovene: [[krivulja]] {{f}}
 * Swedish: [[kurva]] {{c}}
 {{trans-bottom}}
-
+{{rfc-auto|test}}
 {{trans-top|algebraic curve}}
 : ''See'' '''[[algebraic curve#Translations|algebraic curve]]'''
 {{trans-bot}}
