rm tag:test, tagged translations table problem, template -trans-bot +trans-bottom <curve#4509909>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -63,12 +63,12 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Dutch: [[curve]] {{f}}, [[kromming]] {{f}}, [[bocht]] {{m}} (''road'')
 * Esperanto: [[kurbo]], [[kurbiĝo]], [[sinuo]], [[ĝirejo]], [[vojturno]] (''road'')
 * Finnish: [[kaarre]]
-{{trans-mid}}
 * French: [[courbe]] {{f}}
+{{trans-mid}}
 * Hebrew: {{he-translation|עקימה|'aqima}} {{f}}
 * Italian: [[curva]] {{f}}
-* Swedish: [[kurva]] {{c}}
 * Russian: [[изгиб]] {{m}}, [[кривая]] {{f}}, [[поворот]] {{m}}
+* Swedish: [[kurva]] {{c}}
 * [[Telugu]]: [[వంపు]] (vampu)
 {{trans-bottom}}
 
@@ -87,15 +87,16 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Slovene: [[krivulja]] {{f}}
 * Swedish: [[kurva]] {{c}}
 {{trans-bottom}}
-{{rfc-auto|test}}
+
 {{trans-top|algebraic curve}}
 : ''See'' '''[[algebraic curve#Translations|algebraic curve]]'''
-{{trans-bot}}
+{{trans-bottom}}
 
+{{rfc-tsort|unknown line format:  !--Note: put INFORMAL translations in this table, where these exist-- }}
 {{trans-top|informal: usually in plural: attractive features of a woman}}
 * Hebrew: [[חיטובים]] (khit'uvym) {{m|p}}
 <!--Note: put INFORMAL translations in this table, where these exist-->
-{{trans-bot}}
+{{trans-bottom}}
 
 {{trans-top|informal: attractive shape of a woman's body}}
 <!--Note: put INFORMAL translations in this table, where these exist-->
@@ -105,10 +106,10 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Finnish: [[kurvi]] (''usually in plural'' kurvit),
 {{trans-mid}}
 * Italian: [[curva]] {{f}} (''usually plural'')
-* Swedish: [[kurva]] {{c}} (''usually plural''), [[figur]] {{c}} (''usually singular'')
 * Russian: [[изгибы]] {{p}}
+* Swedish: [[kurva]] {{c}} (''usually plural''), [[figur]] {{c}} (''usually singular'')
 * [[Telugu]]: [[వంపులు]] (vampulu), [[వొంపులు]] (vompulu)
-{{trans-bot}}
+{{trans-bottom}}
 
 ===Verb===
 {{en-verb|curv|es}}
@@ -129,8 +130,8 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Italian: [[curvare]]
 {{trans-mid}}
 * Korean: [[구부리다]] (guburida)
-* Swedish: [[böja]], [[kröka]]
 * Russian: [[изгибать]], [[гнуть]]
+* Swedish: [[böja]], [[kröka]]
 {{trans-bottom}}
 
 {{trans-top|cause to swerve from a straight course}}
@@ -141,11 +142,11 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Dutch: [[afbuigen]]
 * Finnish: [[kaartaa]]
 * Italian: [[curvare]]
-{{trans-mid}}
 * Japanese: {{Jpan|[[曲がる]]}} ({{Jpan|[[まがる]]}}, magaru)
+{{trans-mid}}
 * Korean: [[구부러지다]] (gubureojida)
-* Swedish: [[böja]] (sig)
 * Russian: [[изгибаться]], [[гнуться]]
+* Swedish: [[böja]] (sig)
 {{trans-bottom}}
 
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
