--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -2,9 +2,10 @@
 ==English==
 
 ===Pronunciation===
-* (''[[Received Pronunciation|UK]]'') {{IPA|/kɜːv/}}, {{SAMPA|/k3:v/}}
-* (''[[General American|US]]'') {{IPA|/kɝv/}}, {{SAMPA|/k3`v/}}
+* {{a|RP}} {{IPA|/kɜːv/}}, {{SAMPA|/k3:v/}}
+* {{a|GenAM}} {{IPA|/kɝv/}}, {{SAMPA|/k3`v/}}
 * {{audio|en-us-curve.ogg|Audio (US)}}
+* {{rhymes|ɜː(ɹ)v}}
 
 ===Etymology===
 From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
