--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -34,9 +34,10 @@ Abbreviation of Latin {{term|exempli gratia|exempli gratiā|lang=la|for example}
 *Icelandic: [[t.d.]] ([[til dæmis]])
 *Italian: [[ad es.]] (''[[ad esempio]]'')
 *Japanese: [[例]] (rei)
-{{mid}}
 *Korean: [[예]] (ye)
 *Latvian: [[piem.]] ([[piemēram]])
+{{mid}}
+*Lithuanian: [[pvz.]] ([[pavyzdžiui]])
 *Norwegian: [[f.eks.]] ([[for eksempel]])
 *Persian: [[براي مثال]]
 *Portuguese: [[por exemplo]]
