--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -5,7 +5,7 @@
 Pictographic representation of the sun ([[日]]) appearing over the horizon.
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=01|sn=5|four=6010<sub>0</sub>|canj=日一 (AM)}}
+{{Han char|rn=72|rad=日|as=01|sn=5|four=6010<sub>0</sub>|canj=日一 (AM)|ids=⿱[[日]][[一]]}}
 
 # [[dawn]]
 # [[morning]]
