--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -60,9 +60,11 @@ Pictographic representation of the sun ([[日]]) appearing over the horizon.
 
 # {{defn|Mandarin}}
 
+----
+
 ==Old Korean==
 
-===noun===
+===Noun===
 '''旦''' (dani)
 
 # {{Goguryeo}} a [[valley]]
