--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -177,6 +177,7 @@
 * Swedish: {{t+|sv|plommon|n}}
 * Turkish: {{t+|tr|erik}}
 * Vietnamese: ([[quả]]) [[mận]], ([[trái]]) mận
+* West Frisian: {{t|fy|prom}}
 {{trans-bottom}}
 
 {{trans-top|the tree}}
@@ -230,6 +231,7 @@
 {{trans-bottom}}
 
 {{trans-top|See [[raisin]]}}
+* West Frisian: {{t+|fy|rezyn}}
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -250,7 +252,6 @@
 * {{ttbc|Burmese}}: [[မက္မန္းသီး]] (makmansii)
 * {{ttbc|Chinese}}: [[李子]] (lǐzi)
 * {{ttbc|Old English}}: [[plūme]] {{f}}
-* {{ttbc|Frisian}}: [[prom]] (2), [[rezyn]] (5)
 * {{ttbc|Galician}}: [[ameixeira]] {{f}} (1), [[ameixa]] {{f}} (2)
 * {{ttbc|Irish}}: [[pluma]] {{m}}, [[prúna]] {{m}}
 {{checktrans-mid}}
