--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -128,7 +128,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 {{trans-bottom}}
 
 ===Etymology 2===
-Old English ''[[pleġian]]''
+{{etyl|ang}} {{term|plegian|pleġian|lang=ang}}.
 
 ====Verb====
 {{en-verb}}
