--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -120,6 +120,7 @@
 * {{sense|to say something with a loud, threatening voice}} [[thunderer]]
 
 ====Translations====
+{{rfc-tsort|unknown line format:  !-- *Japanese:  雷が鳴る  ( かみなり が なる , kaminarí ga narú)}}
 {{trans-top|to make a noise like thunder}}
 * [[Breton]]: [[ober]] [[kurun]], [[taranal]] / [[taraniñ]]
 * Czech: [[hřmít]]
@@ -159,7 +160,6 @@ by Eveningmist, 04:37, 9 January 2008 (UTC)
 {{trans-mid}}
 {{trans-bottom}}
 
-=====Translations to be checked=====
 {{checktrans-top}}
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 * {{ttbc|Esperanto}}: [[tondri]]
