/* Translations */ oops <thunder#4522182>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -164,9 +164,7 @@
 * {{ttbc|Indonesian}}: [[gelegar]]
 * {{ttbc|Interlingua}}: [[tonar]]
 {{trans-mid}}
-* {{ttbc|Japanese}}: [[雷が鳴る]] ([[かみなり]]が[[なる]], kaminarí ga narú)
-* This means 'it thunders.' I cannot sure this is a common English usage.
-by Eveningmist, 04:37, 9 January 2008 (UTC)
+* {{ttbc|Japanese}}: [[雷が鳴る]] ([[かみなり]]が[[なる]], kaminarí ga narú)  This means 'it thunders.' I cannot sure this is a common English usage. by Eveningmist, 04:37, 9 January 2008 (UTC)
 * {{ttbc|Latin}}: [[tonare]]
 * {{ttbc|Norwegian}}: [[tordne]]
 * {{ttbc|Tupinambá}}: [[sunung]]
