/* Verb  -   suck is really atmospheric pressure pushing*/ <suck#4522602>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -12,7 +12,7 @@ Old English ''[[sūcan]]''
 {{en-verb}}
 
 # To use the [[mouth]] to pull in [[liquid]] substances for ingestion or to perform a similar act on solid material without [[ingestion]].
-# To draw into, by any means, with an attractive force, usually without direct contact
+# To draw into, by any means, with an attractive force, usually without direct contact. Used to describe the effect of  negative pressure allowing atmospheric pressure to push air in, as occurs with breathing, drinking and vacuum cleaning.
 # {{colloquial}} Term of general disparagement, indicating the subject or situation has no redeeming qualities.  With ''at'', indicates a particular area of deficiency.''You're great at baseball, but you suck at golf.''
 # To perform [[fellatio]]; with "off" means to perform fellatio culminating in ejaculation.
 
