--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -97,6 +97,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 * Latin: [[venire]]
 * Malay: [[datang]], [[mari]]
 * [[Manchu]]: [[jimbi]]
+* [[Mandarin]]: [[lai|lái]]
 * Mongolian: [[ирэх]] (irekh)
 * Old English: [[cuman]]
 * [[Pashto]]: {{PSchar|[[راتلل]]}}
