--- a/en/傈/傈.11160.wikitext
+++ b/en/傈/傈.11160.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=人一田木 (OMWD)}}
+
 # [[tribe]]
+
 ====References====
-{{Han ref|kx=0112.220|dkj=00942|hdz=10202.010|uh=5088|ud=20616}}
+* {{Han ref|kx=0112.220|dkj=00942|hdz=10202.010|uh=5088|ud=20616}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[りつ]] (ritsu), [[りち]] (richi)|kun=}}
+* {{ja-readings|on=[[りつ]] (ritsu), [[りち]] (richi)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[lì]] ([[li4]])|wg=li<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:傈]]
