/* Translations */ fi <skirt#4531736>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -159,10 +159,11 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 ====Translations====
 {{trans-top|to be on or from the border of}}
 * Bosnian: [[graničiti se]]
+* Finnish: {{t|fi|ympäröidä}}, {{t|fi|reunustaa}}
 * German: [[umgehen]], [[umrunden]]
 * [[Interlingua]]: [[costear]], [[contornar]]
-* Portuguese: [[rodear]], [[contornar]]
 {{trans-mid}}
+* Portuguese: [[rodear]], [[contornar]]
 * Serbian:
 *: Cyrillic: [[граничити се]]
 *: Roman: [[graničiti se]]
