--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -78,7 +78,7 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 {{trans-bottom}}
 
 {{trans-top|something resembling a skirt}}
-* Finnish: [[hame]]
+* Finnish: {{t|fi|hame}}
 * French: [[jupe]] {{f}}
 {{trans-mid}}
 * German: [[Rock]] {{m}}, [[Schurz]] {{m}},
@@ -89,6 +89,7 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 * Bosnian: [[žena#Bosnian|žena]] {{f}}
 * Croatian: [[žena#Croatian|žena]] {{f}}
 * Czech: [[ženská]] {{f}}
+* Finnish: {{t|fi|hame}}
 * German: [[Rock]] {{m}}, [[Weiberrock]] {{m}}
 * Greek: [[ποδόγυρος]] (podoyiros) {{m}}, [[φουστάνι]] (fustani) {{f}}
 {{trans-mid}}
@@ -100,6 +101,7 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 {{trans-bottom}}
 
 {{trans-top|border}}
+* Finnish: {{t|fi|reunus}}
 * German: [[Saum]] {{m}}
 {{trans-mid}}
 * Portuguese: [[borda]] {{f}}
@@ -115,7 +117,7 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 * [[Catalan]]: [[faldilla]] {{f}}
 * Danish: [[nederdel]] {{g|Danish}}
 * Estonian: [[seelik]]
-* [[Faeroese]]: [[skjúrt]] {{g|Faeroese}}
+* [[Faroese]]: [[skjúrt]] {{g|Faroese}}
 * [[West Frisian]]: [[jûpe]] {{f}}
 * [[Galician]]: [[iochdar]] {{m}}
 * Georgian: [[ქვედაკაბა]] (k’vedakaba)
