--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -56,7 +56,7 @@
 * Dutch: {{t+|nl|mooi}}
 * Esperanto: {{t+|eo|bela|xs=Esperanto}}
 * Estonian: [[kaunis]] [[ilus]]
-* [[Faeroese]]: [[vakur]] {{m}}, [[vøkur]] {{f}} [[vakurt]] {{n}}
+* [[Faroese]]: [[vakur]] {{m}}, [[vøkur]] {{f}} [[vakurt]] {{n}}
 * [[Fijian]]: [[totoka]]
 * Filipino: [[maganda]]
 * Finnish: {{t+|fi|kaunis}}
