--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -147,7 +147,6 @@ From the [[Francs]], a people.
 [[Category:France|*]]
 [[Category:fr:Countries]]
 
-[[ar:France]]
 [[az:France]]
 [[zh-min-nan:France]]
 [[bg:France]]
@@ -156,6 +155,7 @@ From the [[Francs]], a people.
 [[el:France]]
 [[es:France]]
 [[fr:France]]
+[[fy:France]]
 [[gl:France]]
 [[ko:France]]
 [[hy:France]]
@@ -164,11 +164,15 @@ From the [[Francs]], a people.
 [[id:France]]
 [[it:France]]
 [[kl:France]]
+[[kk:France]]
+[[ku:France]]
+[[lo:France]]
 [[la:France]]
 [[lt:France]]
 [[hu:France]]
 [[nl:France]]
 [[ja:France]]
+[[oc:France]]
 [[nds:France]]
 [[pl:France]]
 [[pt:France]]
