/* Translations */ +ga <butter#4532778>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -196,6 +196,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 * Hungarian: [[vaj]]
 * [[Ido]]: [[butro]]
 * [[Interlingua]]: [[butyro]]
+* Irish: {{t|ga|im|m}}
 * Italian: [[burro#Italian|burro]] {{m}}
 * Japanese: [[バター]] (batā)
 {{trans-mid}}
