script template -ARchar +Arab, script template -RUchar +Cyrl, script template -THchar +Thai, sorted/rebalanced translations <butter#4533154>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -176,7 +176,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 
 ====Translations====
 {{trans-top|soft foodstuff made from milk}}
-* Arabic: {{ARchar|[[زبدة]]}} (zúbda) {{f}}
+* Arabic: {{Arab|[[زبدة]]}} (zúbda) {{f}}
 * Bavarian: [[Budda]] {{m}}
 * [[Breton]]: [[amanenn]] {{m}}
 * Bulgarian: [[масло#Bulgarian|масло]] (máslo) {{n}}
@@ -207,7 +207,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 * Latvian: [[sviests]] {{m}}
 * Lithuanian: [[sviestas]] {{m}}
 * [[Macedonian]]: [[путер]] {{m}}
-* Mongolian: {{RUchar|[[цөцгийн тос]]}} (tsötsgiin tos)
+* Mongolian: {{Cyrl|[[цөцгийн тос]]}} (tsötsgiin tos)
 * Polish: [[masło]] {{n}}
 * Portuguese: [[manteiga]] {{f}}
 * Romanian: [[unt]] {{n}}
@@ -219,7 +219,7 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 * Spanish: [[mantequilla]] {{f}}, [[manteca]] {{f}} (''Argentina, Paraguay, Uruguay'')
 * Swedish: [[smör]] {{n}}
 * [[Telugu]]: [[వెన్న]]
-* Thai: {{THchar|[[เนย]]}} (noey)
+* Thai: {{Thai|[[เนย]]}} (noey)
 * Ukrainian: [[масло#Ukrainian|масло]] (máslo) {{n}}
 * Vietnamese: [[bơ]]
 {{trans-bottom}}
@@ -256,14 +256,14 @@ Old English ''[[butere]]'' < a West Germanic borrowing of Latin ''[[butyrum]]'' 
 * French: [[beurrer]]
 * German: [[mit]] Butter [[bestreichen]]
 * [[Interlingua]]: [[butyrar]]
-{{trans-mid}}
 * Italian: [[imburrare]]
+{{trans-mid}}
 * Polish: [[smarować]] [[masłem]]
 * Portuguese: [[amanteigar]]; [[passar]] [[manteiga]] [[em]]
 * Russian: [[намазывать]] [[масло|маслом]] (namázyvat’ máslom)
 * Slovene: [[namazati z maslom]]
 * Spanish: [[untar]] [[mantequilla]]
-* Thai: {{THchar|[[ทาเนย]]}} (ta noey)
+* Thai: {{Thai|[[ทาเนย]]}} (ta noey)
 * Vietnamese: [[quẹt]] bơ (vào)
 {{trans-bottom}}
 
