--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -19,6 +19,12 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 # A type of [[desk]].
 # A species of [[bird]]; ''Sagittarius serpentarius''.
 
+====Derived terms====
+* [[secretary bird]]
+
+====Related terms====
+* [[secretory]]
+
 ====Translations====
 {{trans-top|person keeping records and handling clerical work}}
 * Arabic: {{ARchar|[[سكرتير]]}} {{IPAchar|(sekretér)}} {{m|f}}
@@ -94,12 +100,6 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 * {{ttbc|Interlingua}}: [[secretario]] {{m}}, [[scriptorio]]
 * {{ttbc|Italian}}: [[segretario]] {{m}}, [[segretaria]] {{f}}
 {{trans-bottom}}
-
-====Derived terms====
-* [[secretary bird]]
-
-===See also===
-* [[secretory]]
 
 [[Category:1000 English basic words]]
 
