--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -95,8 +95,10 @@
 [[zh-min-nan:United States of America]]
 [[el:United States of America]]
 [[fr:United States of America]]
+[[gl:United States of America]]
 [[ko:United States of America]]
 [[it:United States of America]]
+[[kk:United States of America]]
 [[ku:United States of America]]
 [[lt:United States of America]]
 [[hu:United States of America]]
