--- a/en/坌/坌.13007.wikitext
+++ b/en/坌/坌.13007.wikitext
@@ -1,33 +1,53 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=8010<sub>4</sub>|canj=金尸竹土 (CSHG)}}
+
 # [[dust]], [[earth]]
 # a bank of earth
 # to [[dig]]
 # to bring together
+
 ====References====
-{{Han ref|kx=0225.090|dkj=04926|dj=0460.020|hdz=10424.040|uh=574C|ud=22348|bh=CAAC|bd=51884}}
+* {{Han ref|kx=0225.090|dkj=04926|dj=0460.020|hdz=10424.040|uh=574C|ud=22348|bh=CAAC|bd=51884}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ban3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[ほん]] (hon), [[ぼん]] (bon), [[ふん]] (fun)|kun=[[ちり]] (chiri), [[ならぶ]] (narabu), [[あつまる]] (atsumaru), [[わくさま]] (wakusama)}}
+* {{ja-readings|on=[[ほん]] (hon), [[ぼん]] (bon), [[ふん]] (fun)|kun=[[ちり]] (chiri), [[ならぶ]] (narabu), [[あつまる]] (atsumaru), [[わくさま]] (wakusama)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=분|rv=bun|mr=pun}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[bèn]] ([[ben4]])|wg=pen<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坌]]
