--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -12,7 +12,7 @@
 
 ===Adjective===
 {{en-adj}}
-
+Alyson Palmer
 # possessing charm and attractive.
 #: ''Anyone who has ever met her thought she was absolutely '''beautiful'''.''
 # {{context|of the weather}} pleasant; clear.
