--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -13,7 +13,7 @@
 ===Adjective===
 {{en-adj}}
 
-# possessing charm and attractive.
+# To be Jessica
 #: ''Anyone who has ever met her thought she was absolutely '''beautiful'''.''
 # {{context|of the weather}} pleasant; clear.
 # well executed
