* before Han ref, * before ja-readings <做#4558069>

--- a/en/做/做.11114.wikitext
+++ b/en/做/做.11114.wikitext
@@ -1,72 +1,92 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2824<sub>0</sub>|canj=人十口大 (OJRK)}}
+
 # [[work]], [[make]]
 # [[act]]
+
 ====References====
-{{Han ref|kx=0110.290|dkj=00861|dj=0236.130|hdz=10186.180|uh=505A|ud=20570|bh=B0B5|bd=45237}}
+* {{Han ref|kx=0110.290|dkj=00861|dj=0236.130|hdz=10186.180|uh=505A|ud=20570|bh=B0B5|bd=45237}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=jou6}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[さく]] (saku), [[さ]] (sa)|kun=[[つくる]] (tsukuru), [[なす]] (nasu)}}
+* {{ja-readings|on=[[さく]] (saku), [[さ]] (sa)|kun=[[つくる]] (tsukuru), [[なす]] (nasu)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[주]], [[자]]|rv=ju, ja|mr=chu, cha}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
 {{see|zuo}}
 
 ===Pronunciation===
-*{{audio|zh-zuò.ogg|audio}}
+* {{audio|zh-zuò.ogg|audio}}
 
 ===Hanzi===
 {{cmn-hanzi|pin=[[zuò]] ([[zuo4]])|wg=tso<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 ====Compounds====
-*[[做爱]]
-*[[做伴]], [[做伴儿]]
-*[[做操]]
-*[[做东]]
-*[[做法]]
-*[[做工]], [[做工儿]]
-*[[做鬼]], [[做鬼儿]]
-*[[做鬼脸]], [[做鬼脸儿]]
-*[[做活儿]]
-*[[做客]]
-*[[做礼拜]]
-*[[做买卖]]
-*[[做满月]]
-*[[做媒]]
-*[[做梦]]
-*[[做圈套]]
-*[[做人]]
-*[[做声]], [[做声儿]]
-*[[做生日]]
-*[[做生意]]
-*[[做事]]
-*[[做手脚]]
-*[[做寿]]
-*[[做文章]]
-*[[做戏]]
-*[[做秀]]
-*[[做学问]]
-*[[做贼心虚]]
-*[[做针线]]
-*[[做主]]
-*[[做作]]
+* [[做爱]]
+* [[做伴]], [[做伴儿]]
+* [[做操]]
+* [[做东]]
+* [[做法]]
+* [[做工]], [[做工儿]]
+* [[做鬼]], [[做鬼儿]]
+* [[做鬼脸]], [[做鬼脸儿]]
+* [[做活儿]]
+* [[做客]]
+* [[做礼拜]]
+* [[做买卖]]
+* [[做满月]]
+* [[做媒]]
+* [[做梦]]
+* [[做圈套]]
+* [[做人]]
+* [[做声]], [[做声儿]]
+* [[做生日]]
+* [[做生意]]
+* [[做事]]
+* [[做手脚]]
+* [[做寿]]
+* [[做文章]]
+* [[做戏]]
+* [[做秀]]
+* [[做学问]]
+* [[做贼心虚]]
+* [[做针线]]
+* [[做主]]
+* [[做作]]
 
 [[Category:Mandarin entries with audio links]]
+
 [[fr:做]]
 [[hu:做]]
 [[ja:做]]
