--- a/en/垧/垧.13099.wikitext
+++ b/en/垧/垧.13099.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=土竹月口 (GHBR)}}
+
 # variable unit of land measure
+
 ====References====
-{{Han ref|kx=0228.291|dkj=05080|hdz=10439.190|uh=57A7|ud=22439}}
+* {{Han ref|kx=0228.291|dkj=05080|hdz=10439.190|uh=57A7|ud=22439}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[けい]] (kei), [[きょう]] (kyō)|kun=}}
+* {{ja-readings|on=[[けい]] (kei), [[きょう]] (kyō)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jiōng]] ([[jiong1]])|wg=chiung<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:垧]]
