--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -109,6 +109,7 @@
 =====Translations=====
 {{trans-top|of or relating to port, the left-hand side of a vessel}}
 * Dutch: [[bakboord-]]
+* Finnish: {{t|fi|paapuri|alt=paapuurin}}
 * French: du [[bâbord]]
 * Greek: [[αριστερό]] (aristeró) {{n}}
 {{trans-mid}}
