--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -1,39 +1,55 @@
 {{see|仮}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2724<sub>7</sub>|canj=人口尸水 (ORSE)}}
+
 # [[falsehood]], [[deception]]
 # [[fake]], not [[real]]
 # [[vacation]]
+
 ====References====
-{{Han ref|kx=0110.030|dkj=00835|dj=0233.160|hdz=10196.020|uh=5047|ud=20551|bh=B0B2|bd=45234}}
+* {{Han ref|kx=0110.030|dkj=00835|dj=0233.160|hdz=10196.020|uh=5047|ud=20551|bh=B0B2|bd=45234}}
+
 ----
 
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=ga2, ga3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
 
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 ====Readings====
-{{ja-readings|on=[[か]] (ka), [[け]] (ke)|kun=[[かり]] (kari)}}
+* {{ja-readings|on=[[か]] (ka), [[け]] (ke)|kun=[[かり]] (kari)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=[[가]], [[하]]|rv=ga, ha|mr=ka, ha}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jiǎ]] ([[jia3]])|wg=chia<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 * '''Compounds''':
-**[[假借]]
+** [[假借]]
 
 [[fr:假]]
 [[ko:假]]
