iwiki +an, lo <come#4572843>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -201,6 +201,7 @@ Latin [[comede]] (imperative), [[comedit]] (present).
 
 [[ang:come]]
 [[ar:come]]
+[[an:come]]
 [[de:come]]
 [[el:come]]
 [[es:come]]
@@ -213,6 +214,7 @@ Latin [[comede]] (imperative), [[comedit]] (present).
 [[it:come]]
 [[kk:come]]
 [[ku:come]]
+[[lo:come]]
 [[la:come]]
 [[li:come]]
 [[hu:come]]
