/* See also */ balance parentheses <port#4574057>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -246,7 +246,7 @@ From {{etyl|fro}} (and {{etyl|fr}}) {{term|porter#verb|porter (verb)|lang=fro}},
 {{trans-bottom}}
 
 ===See also===
-* {{pedialite|Port|Port (place where ships dock}}
+* {{pedialite|Port|Port (place where ships dock)}}
 * {{pedialite|Port wine}}
 * {{pedialite|Port (computing)|Port (transfer of computer of computer data)}}
 * {{pedialite|Porting|Porting (transfer of computer programs between platforms)}}
