iwiki +sv <cost#4574521>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -103,6 +103,7 @@ From {{OF.}} ''[[coster]]'' (modern: ''[[coût]]'').
 [[ru:cost]]
 [[simple:cost]]
 [[fi:cost]]
+[[sv:cost]]
 [[ta:cost]]
 [[te:cost]]
 [[vi:cost]]
