--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -190,6 +190,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 [[hy:curve]]
 [[io:curve]]
 [[it:curve]]
+[[lo:curve]]
 [[hu:curve]]
 [[nl:curve]]
 [[pl:curve]]
