--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -43,6 +43,7 @@
 * Greek: [[λιμάνι]] {{n}}, [[λιμένας]] {{m}}
 * Hungarian: [[kikötő]]
 * [[Ido]]: [[portuo]]
+* Indonesian: [[labuh|pelabuhan]]
 {{trans-mid}}
 * Italian: [[porto]] {{m}}
 * Japanese: [[港]]　([[みなと]], ''minato'')
@@ -87,7 +88,6 @@
 
 {{checktrans-top}}
 * {{ttbc|Hawaiian}}: [[awa]]
-* {{ttbc|Indonesian}}: [[labuh|pelabuhan]] (1)
 * {{ttbc|Latin}}: [[portus]] {{m}} (1)
 {{checktrans-mid}}
 * {{ttbc|Malay}}: [[bandar]] (2)
