--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -43,7 +43,7 @@
 * Greek: [[λιμάνι]] {{n}}, [[λιμένας]] {{m}}
 * Hungarian: [[kikötő]]
 * [[Ido]]: [[portuo]]
-* Indonesian: [[labuh|pelabuhan]]
+* Indonesian: [[pelabuhan]]
 {{trans-mid}}
 * Italian: [[porto]] {{m}}
 * Japanese: [[港]]　([[みなと]], ''minato'')
