iwiki +lo <fight#4588997>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -307,6 +307,7 @@ From {{OE.}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevecht]]'
 [[it:fight]]
 [[kk:fight]]
 [[ku:fight]]
+[[lo:fight]]
 [[hu:fight]]
 [[nl:fight]]
 [[ja:fight]]
