--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -164,6 +164,7 @@ From the [[Francs]], a people.
 [[id:France]]
 [[it:France]]
 [[kl:France]]
+[[ka:France]]
 [[kk:France]]
 [[ku:France]]
 [[lo:France]]
