+ cy translation / + {{sense|}} <stomach#4603915>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -15,7 +15,7 @@ From {{AGr.}} [[στόμαχος]] (stómachos)
 # {{informal}} The [[belly]].
 
 ====Synonyms====
-* (''belly''): [[abdomen]], [[belly]], [[gut]], [[guts]], [[tummy]]
+* {{sense|belly}} [[abdomen]], [[belly]], [[gut]], [[guts]], [[tummy]]
 
 ====Derived terms====
 * [[stomach lining]]
@@ -63,6 +63,7 @@ From {{AGr.}} [[στόμαχος]] (stómachos)
 * [[Telugu]]: [[పొట్ట]] (poTTa), [[కడుపు]] (kaDupu)
 * Turkish: {{t+|tr|mide}}
 * [[Upper Sorbian]]: [[žołdk]] {{m}}
+* Welsh: {{t-|cy|bola}}
 * [[West Frisian]]: [[mage]]
 {{trans-bottom}}
 
