iwiki +fy, li <New Zealand#4604596>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -100,9 +100,11 @@ From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in
 [[de:New Zealand]]
 [[el:New Zealand]]
 [[fr:New Zealand]]
+[[fy:New Zealand]]
 [[ko:New Zealand]]
 [[io:New Zealand]]
 [[id:New Zealand]]
+[[li:New Zealand]]
 [[hu:New Zealand]]
 [[ja:New Zealand]]
 [[pl:New Zealand]]
