--- a/en/愪/愪.15677.wikitext
+++ b/en/愪/愪.15677.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=|canj=心口月金 (PRBC)}}
+
 # to be grieved, sad
+
 ====References====
-{{Han ref|kx=0396.110|dkj=10985|dj=0734.180|hdz=42336.100|uh=612A|ud=24874}}
+* {{Han ref|kx=0396.110|dkj=10985|dj=0734.180|hdz=42336.100|uh=612A|ud=24874}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[うん]] (un), [[いん]] (in)|kun=[[うれえるさま]] (ureerusama), [[うごく]] (ugoku), [[うれえる]] (ureeru)}}
+* {{ja-readings|on=[[うん]] (un), [[いん]] (in)|kun=[[うれえるさま]] (ureerusama), [[うごく]] (ugoku), [[うれえる]] (ureeru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yún]] ([[yun2]])|wg=yün<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愪]]
