--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -151,6 +151,7 @@ From Old English [[ceosan|ċēosan]].
 [[hu:choose]]
 [[nl:choose]]
 [[ja:choose]]
+[[oc:choose]]
 [[pl:choose]]
 [[simple:choose]]
 [[fi:choose]]
