/* English */ +Czech <coat#4625156>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -13,8 +13,16 @@
 # {{countable}} The [[fur]] or [[feathers]] of animal.
 # {{context|uncountable|nautical}} [[canvas]] [[painted]] with thick [[tar]] and secured round a [[mast]] or [[bowsprit]] to prevent [[water]] running down the sides into the [[hold]] (now made of [[rubber]] or [[leather]])
 
+====Derived terms====
+* [[buffy coat]]
+* [[coat of arms]]
+* [[greatcoat]]
+* [[covert-coat]]
+* [[overcoat]]
+
 ====Translations====
-{{trans-top|an outer garment covering the upper torso and arms}}
+{{trans-top|outer garment covering the upper torso and arms}}
+* Czech: [[kabát]] {{m}}
 * Danish: [[frakke]] {{c}}
 * Dutch: {{t+|nl|mantel|m}}, {{t+|nl|jas|m}}
 * Finnish: {{t+|fi|takki}}
@@ -33,7 +41,7 @@
 * Swedish: {{t+|sv|rock|c}}
 {{trans-bottom}}
 
-{{trans-top|a covering of material, such as paint}}
+{{trans-top|covering of material, such as paint}}
 * Danish: {{t-|da|lag|n}}
 * Dutch: {{t+|nl|laag|f}}
 * Finnish: {{t+|fi|pinta}}, {{t+|fi|pinnoite}}
@@ -66,13 +74,6 @@
 * {{ttbc|Irish}}: [[cóta]] {{m}}
 * {{ttbc|Romanian}}: [[haină]] {{f}}, [[manta]] {{f}}
 {{trans-bottom}}
-
-====Derived terms====
-* [[buffy coat]]
-* [[coat of arms]]
-* [[greatcoat]]
-* [[covert-coat]]
-* [[overcoat]]
 
 ===Verb===
 {{en-verb}}
