--- a/en/偗/偗.11111.wikitext
+++ b/en/偗/偗.11111.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2926<sub>2</sub>|canj=人火竹山 (OFHU)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0110.250|dkj=00857|dj=0236.090|hdz=10189.040|uh=5057|ud=20567|bh=D466|bd=54374}}
+* {{Han ref|kx=0110.250|dkj=00857|dj=0236.090|hdz=10189.040|uh=5057|ud=20567|bh=D466|bd=54374}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[せい]] (sei), [[しゃう]] (shau)|kun=[[まつすぐなさま]] (matsusugunasama)}}
+* {{ja-readings|on=[[せい]] (sei), [[しゃう]] (shau)|kun=[[まつすぐなさま]] (matsusugunasama)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[shěng]] ([[sheng3]])|wg=sheng<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偗]]
