--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -77,7 +77,8 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * Polish: {{t+|pl|walczyć}}
 * Portuguese: {{t+|pt|lutar}}
 * {{trreq|Romanian}}
-* Russian: [[бороться]] (borót’s’a)
+* Portuguese: {{t+|pt|lutar}}
+* Russian: {{t|ru|драться|sc=Cyrl|tr=drát's'a}} {{impf}}, {{t|ru|биться|sc=Cyrl|tr=bít's'a}} {{impf}}, {{t|ru|бороться|sc=Cyrl|tr=borót’s’a}} ''wrestle'', {{t|ru|сражаться|sc=Cyrl|tr=sražát's'a}} {{impf}} ''in a duel or bttle''
 * {{trreq|Sanskrit}}
 * [[Scottish Gaelic]]: [[cog]], [[sabaid]]
 * {{trreq|Slovak}}
@@ -99,6 +100,8 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * Japanese: [[戦う]] / [[闘う]] ([[たたかう]], tatakau)
 * [[Khmer]]: {{Khmr|[[តស៊ូ]]}} (dtor-sū)
 * Portuguese: {{t+|pt|lutar}}
+* Portuguese: {{t+|pt|lutar}}
+* Russian: {{t|ru|бороться|sc=Cyrl|tr=borót’s’a}}, {{t|ru|сражаться|sc=Cyrl|tr=sražát's'a}} {{impf}}
 * Spanish: {{t-|es|luchar}}
 {{trans-bottom}}
 
@@ -109,6 +112,8 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 {{trans-mid}}
 * Icelandic: {{t-|is|heyja}}
 * Japanese: [[戦う]] / [[闘う]] ([[たたかう]], tatakau)
+* Portuguese: {{t+|pt|lutar}}
+* Russian: {{t|ru|биться|sc=Cyrl|tr=bít's'a}} {{impf}}, {{t|ru|сражаться|sc=Cyrl|tr=sražát's'a}} {{impf}}
 * [[Scottish Gaelic]]: [[cog]], [[sabaid]]
 {{trans-bottom}}
 
@@ -125,6 +130,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * [[Khmer]]: {{Khmr|[[ប្រយុទ្ឋ]]}} (bprəyŭt)
 * Korean: [[싸우다]] (ssauda)
 * Portuguese: [[lutar]] com/contra, [[combater]]
+* Russian: {{t|ru|биться|sc=Cyrl|tr=bít's'a}} {{impf}}, {{t|ru|сражаться|sc=Cyrl|tr=sražát's'a}} {{impf}}
 * [[Scottish Gaelic]]: [[cog]], [[sabaid]]
 {{trans-bottom}}
 
@@ -144,6 +150,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * Latin: {{t-|la|pugnare}}
 * Polish: {{t+|pl|walczyć}}
 * Portuguese: [[lutar]] contra, [[combater]], [[enfrentar]]
+* Russian: {{t|ru|биться|sc=Cyrl|tr=bít's'a}} {{impf}}, {{t|ru|сражаться|sc=Cyrl|tr=sražát's'a}} {{impf}}
 * Swedish: [[bekämpa]]
 {{trans-bottom}}
 
@@ -213,6 +220,7 @@ From {{OE.}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevecht]]'
 * Latin: {{t+|la|pugna}}
 * Portuguese: {{t+|pt|luta|f}}
 * Romanian: {{t-|ro|luptă|f}}
+* Russian: {{t|ru|драка|f|sc=Cyrl|tr=dráka}}, {{t|ru|бой|m|sc=Cyrl|tr=boj}}
 * [[Scottish Gaelic]]: [[cogadh]] {{m}}, [[sabaid]] {{f}}
 * Spanish: {{t+|es|lucha|f}}
 {{trans-bottom}}
@@ -232,6 +240,7 @@ From {{OE.}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevecht]]'
 *: Sorani: {{t|ku|شه‌ڕ|tr=shaR|sc=KUchar}}
 * Latin: {{t+|la|pugna}}
 * Portuguese: {{t+|pt|batalha|f}}
+* Russian: {{t|ru|битва|f|sc=Cyrl|tr=bítva}}, {{t|ru|сражение|n|sc=Cyrl|tr=sražénije}}
 * [[Scottish Gaelic]]: [[cogadh]] {{m}}, [[sabaid]] {{f}}, [[blàr]] {{m}}
 * Swedish: {{t+|sv|strid}}, {{t+|sv|kamp}}
 {{trans-bottom}}
@@ -247,6 +256,7 @@ From {{OE.}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevecht]]'
 * Japanese: [[喧嘩]] (けんか, kenka)
 * Latin: {{t+|la|pugna}}
 * Portuguese: {{t+|pt|briga|f}}
+* Russian: {{t|ru|драка|f|sc=Cyrl|tr=dráka}}, {{t|ru|бой|m|sc=Cyrl|tr=boj}}
 * [[Scottish Gaelic]]: [[cogadh]] {{m}}, [[sabaid]] {{f}}
 {{trans-bottom}}
 
@@ -262,6 +272,7 @@ From {{OE.}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevecht]]'
 * Japanese: [[試合]] (しあい, shiai)
 * Polish: {{t+|pl|walka|f}}
 * Portuguese: {{t+|pt|luta|f}}, {{t+|pt|combate|m}}
+* Russian: {{t|ru|бой|m|sc=Cyrl|tr=boj}}
 * Swedish: {{t+|sv|match}}, {{t+|sv|fajt}}
 {{trans-bottom}}
 
@@ -273,6 +284,7 @@ From {{OE.}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevecht]]'
 {{trans-mid}}
 * Hebrew: {{he-translation|מאבק|ma`avák}} {{m}}
 * Polish: {{t+|pl|walka|f}}
+* Russian: {{t|ru|борьба|f|sc=Cyrl|tr=bor'bá}}
 * Swedish: {{t+|sv|kamp}}
 {{trans-bottom}}
 
