--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -46,7 +46,9 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Hungarian: {{t+|hu|játék}}
 {{trans-mid}}
 * Italian: {{t+|it|gioco|m}}
-* Kurdish: {{t+|ku|yarî|f}}, {{t+|ku|lîstik|f}}
+* Kurdish: 
+*:Kurmanji: {{t+|ku|yarî|f}}, {{t+|ku|lîstik|f}}
+*:Sorani: {{t|ku|یاری|tr=yarî|sc=KUchar}}, {{t|ku|وازی|tr=wazí|sc=KUchar}}
 * Latin: {{t-|la|ludus|m}}
 * [[Malayalam]]: [[കളി]] (kaLi)
 * Norwegian: {{t+|no|spill}}
