/* {{abbreviation}} */ rm "id est" from def, as that's covered in the etym., and [[id est]] doesn't have an ==English== section <i.e.#4644066>

--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -11,7 +11,7 @@ From {{L.}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est||tha
 ==={{abbreviation}}===
 '''i.e.'''
 
-# {{context|[[initialism]]}} [[id est]]: That is; in other words; that is to say.
+# {{context|[[initialism]]}} That is; in other words; that is to say.
 #: ''The three U.S. states on the west coast ('''i.e.''' Washington, Oregon, and California) have favorable climates.''
 
 ====Usage notes====
