--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -4,17 +4,17 @@
 Old English ''[[sūcan]]''
 
 ===Pronunciation===
-*{{audio|en-us-suck.ogg|Audio (US)}}
+* {{audio|en-us-suck.ogg|Audio (US)}}
 
-*:Rhymes: [[Rhymes:English:-ʌk|-ʌk]]
+*: Rhymes: [[Rhymes:English:-ʌk|-ʌk]]
 
 ===Verb===
 {{en-verb}}
 
 # To use the [[mouth]] to pull in [[liquid]] substances for ingestion or to perform a similar act on solid material without [[ingestion]].
-# To draw into, by any means, with an attractive force, usually without direct contact
+# To draw into, by any means, with an attractive force, usually without direct contact. Used to describe the effect of  negative pressure allowing atmospheric pressure to push air in, as occurs with breathing, drinking and vacuum cleaning.
 # {{colloquial}} Term of general disparagement, indicating the subject or situation has no redeeming qualities.  With ''at'', indicates a particular area of deficiency.''You're great at baseball, but you suck at golf.''
-# To perform [[fellatio]]; with "off" means to perform fellatio culminating in ejaculation. "''[[Angela sucks cock.]]''
+# To perform [[fellatio]]; with "off" means to perform fellatio culminating in ejaculation.
 
 ====Synonyms====
 * (3, 4 above) To [[blow]]
@@ -31,7 +31,7 @@ Old English ''[[sūcan]]''
 
 ====Translations====
 {{trans-top|to use the mouth to pull in liquid substances for ingestion or to perform a similar act on solid material without ingestion}}
-* Arabic: {{ARchar|[[مص]]}}
+* Arabic: {{Arab|[[مص]]}}
 * Armenian: [[ծծել]] (tstsel)
 * Bulgarian: [[смуча]] (smuča)
 * [[Catalan]]: [[xuclar]]
@@ -39,16 +39,16 @@ Old English ''[[sūcan]]''
 * [[Ewe]]: [[nyi]]
 * Finnish: [[imeä]]
 * French: [[sucer]]
-* Hindi: [[चूसना]] (ćūsnā)
 * German: [[saugen]]
+* Hindi: [[चूसना]] (ćūsnā)
 * Italian: [[succhiare]], [[suggere]]
-{{trans-mid}}
 * Korean: [[빨다]] (ppalda)
+{{trans-mid}}
 * Kurdish: [[mêjîn]], [[mêtin]], {{KUchar|[[مژین]]}}
 * Latin: [[fellare]]
 * Norwegian: [[suge]]
-* Portuguese: [[chupar]], [[sugar]]
 * Polish: [[ssać]]
+* Portuguese: [[chupar]], [[sugar]]
 * Romanian: [[suge]]
 * Russian: [[сосать]] (sosát’), [[всасывать]] (vsásyvat’)
 * Slovak: [[cmúľať]]
@@ -74,8 +74,8 @@ Old English ''[[sūcan]]''
 * Bulgarian: [[духам]] (dukham)
 * French: [[être]] [[chiant]] [[en]]
 * Hindi: (bakwaas)
-* Italian: [[fare schifo a]]
 {{trans-mid}}
+* Italian: [[fare schifo a]]
 * Norwegian: [[suge]]
 * Swedish: [[suga]]
 {{trans-bottom}}
@@ -90,9 +90,9 @@ Old English ''[[sūcan]]''
 # a [[sycophant]]
 
 ====Quotations====
-*'''1916''': "You are McGlade's '''suck'''." - [[w:James Joyce|James Joyce]], ''[[w:Portrait of the Artist as a Young Man|Portrait of the Artist as a Young Man]] (Macmillan Press Ltd, paperback, 23)
+* '''1916''': "You are McGlade's '''suck'''." - [[w:James Joyce|James Joyce]], ''[[w:Portrait of the Artist as a Young Man|Portrait of the Artist as a Young Man]] (Macmillan Press Ltd, paperback, 23)
 
-*'''1970''': "...(The Rum Diary) has a few very high points...but as a novel, '''it sucks'''." - [[w:Hunter S. Thompson|Hunter S. Thompson]], ''Fear and Loathing in America (Simon and Schuster, hardcover, pg. 251)''
+* '''1970''': "...(The Rum Diary) has a few very high points...but as a novel, '''it sucks'''." - [[w:Hunter S. Thompson|Hunter S. Thompson]], ''Fear and Loathing in America (Simon and Schuster, hardcover, pg. 251)''
 
 ----
 
@@ -109,7 +109,9 @@ Old English ''[[sūcan]]''
 [[fr:suck]]
 [[io:suck]]
 [[it:suck]]
+[[kk:suck]]
 [[hu:suck]]
+[[pt:suck]]
 [[ro:suck]]
 [[fi:suck]]
 [[ta:suck]]
