--- a/en/昪/昪.16978.wikitext
+++ b/en/昪/昪.16978.wikitext
@@ -1,21 +1,33 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=日戈廿 (AIT)}}
+
 # [[delighted]]
 # [[pleased]]
+
 ====References====
-{{Han ref|kx=0493.160|dkj=13849|dj=0857.040|hdz=21504.100|uh=662A|ud=26154}}
+* {{Han ref|kx=0493.160|dkj=13849|dj=0857.040|hdz=21504.100|uh=662A|ud=26154}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[へん]] (hen), [[べん]] (ben)|kun=[[たのしむさま]] (tanoshimusama), [[あきらか]] (akiraka)}}
+* {{ja-readings|on=[[へん]] (hen), [[べん]] (ben)|kun=[[たのしむさま]] (tanoshimusama), [[あきらか]] (akiraka)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[biàn]] ([[bian4]])|wg=pien<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昪]]
