--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -13,7 +13,7 @@
 
 ====Translations====
 {{trans-top|Country in North America}}
-* Afrikaans: {{t|af|Verenigde State van Amerika}}
+* [[Afrikaans]]: {{t|af|Verenigde State van Amerika}}
 * Albanian: [[Shtete e Bashkuara të Amerikës]], [[SHBA]]
 * Arabic: {{Arab|[[الولايات المتحدة الامريكية]]}} (al-wilayāt al-muttáħedat al-’amrikíyya), {{Arab|[[الولايات المتحدة]]}} (al-wilayāt al-muttáħeda) {{f|p}}
 * Armenian: [[Ամերիկայի Միացյալ Նահանգներ]] (Amērikayi Miats‘yal Nahangnēr)
@@ -23,7 +23,7 @@
 * [[Breton]]: [[Stadoù-Unanet Amerika]] {{f|p}}, [[SUA]]
 * Bulgarian: [[Съединени Американски Щати]] (Sǎedineni amerikanski štati), [[САЩ]]
 * [[Catalan]]: [[Estats Units d'Amèrica]] {{m|p}}
-* Chinese: 
+* Chinese:
 *: Cantonese: {{t|yue|美利堅合眾國}}
 *: Mandarin: [[美利坚合众国]]/[[美利堅合衆國]] (Měilìjiān Hézhòngguó); [[美国]]/[[美國]] (Měiguó)
 * Croatian: {{t-|hr|Sjedinjene Američke Države|f|p}}
@@ -48,8 +48,8 @@
 * Italian: [[Stati Uniti d'America]] {{m|p}}, (''short form'') [[Stati Uniti]] {{m|p}}, [[SUA]]
 * Japanese: {{t|ja|米国|sc=Jpan}} (べいこく, Béikoku), {{t|ja|アメリカ合衆国|sc=Jpan}} (アメリカがっしゅうこく, Ameriká Gasshūkoku)
 * Kazakh: [[Америка Құрама Штаттары]]
-* [[Khmer]]: {{Khmr|[[សហរដ្ឋអាមេរិក]]}} (sahā rōŭt āmērik)
 {{trans-mid}}
+* [[Khmer]]: {{Khmr|[[សហរដ្ឋអាមេរិក]]}} (sahā rōŭt āmērik)
 * Kirghiz: [[Америка Кошмо Штаттары]] (Amerika Koşmo Ştattarı)
 * Korean: [[미국]]/[[美國]] (Miguk), [[아메리카 합중국]] (Amerika Hapjungguk)
 * Latin: [[Respublicae Unitae Americae]], [[Status Uniti Americae]], [[Civitates Foederatae Americae]]
