--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -229,6 +229,8 @@ English transcriptions of Chinese speech often fail to distinguish between the c
 [[it:pen]]
 [[kk:pen]]
 [[ku:pen]]
+[[lo:pen]]
+[[lt:pen]]
 [[hu:pen]]
 [[nl:pen]]
 [[ja:pen]]
