--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -34,6 +34,7 @@
 * Japanese: [[亀]] ([[かめ]], kame), [[陸亀]] ([[りくがめ]], rikugame)
 * Korean: [[거북]] (geobuk), [[거북이]] (geobugi)
 {{mid}}
+* Latvian: [[bruņurupucis]] {{m}}
 * Lithuanian: [[vėžlys]] {{m}}
 * [[Macedonian]]: [[желка]] {{f}}
 * Norwegian: [[skilpadde]]
