--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -2,13 +2,17 @@
 ==English==
 
 ===Etymology===
-By abbreviation.
+{{abbreviation}}
 
-===Noun===
+====Noun====
 {{en-noun}}
 
 # {{slang}} [[heterosexual|Heterosexual]].
+===Etymology 2===
+====Adjective====
+{{en-adj}}
 
+# {{form of|incorrect form|heated}}
 ===Anagrams===
 * [[the]]
 
@@ -17,7 +21,7 @@ By abbreviation.
 ==Dutch==
 
 ===Pronunciation===
-*{{audio|Nl-het.ogg|audio}}
+* {{audio|Nl-het.ogg|audio}}
 
 ===Article===
 {{infl|nl|article|g=n}}
@@ -135,7 +139,7 @@ Inflected form of ''[[hatan|hātan]]''.
 
 ====Antonyms====
 ;of high temperature
-* [[iskall]], [[kall]], [[kylig]],  [[sval]]
+* [[iskall]], [[kall]], [[kylig]], [[sval]]
 ;spicy
 * [[mild]]
 ;popular
