--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -1,13 +1,14 @@
 {{see|hét|нет}}
 ==English==
 
-===Etymology===
+===Etymology 1===
 {{abbreviation}}
 
 ====Noun====
 {{en-noun}}
 
 # {{slang}} [[heterosexual|Heterosexual]].
+
 ===Etymology 2===
 ====Adjective====
 {{en-adj}}
