--- a/en/昘/昘.16960.wikitext
+++ b/en/昘/昘.16960.wikitext
@@ -1,14 +1,20 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=日卜竹尸 (AYHS), X日卜竹尸 (XAYHS)}}
+
 # {{defn|Han|sort=日04}}
+
 ====References====
-{{Han ref|kx=0492.121|dkj=13797|hdz=21496.030|uh=6618|ud=26136}}
+* {{Han ref|kx=0492.121|dkj=13797|hdz=21496.030|uh=6618|ud=26136}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[fǎng]] ([[fang3]])|wg=fang<sup>3</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昘]]
