--- a/en/偨/偨.11128.wikitext
+++ b/en/偨/偨.11128.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2129<sub>4</sub>|canj=人卜心木 (OYPD)}}
+
 # uneven
+
 ====References====
-{{Han ref|kx=0111.190|dkj=00883|dj=0237.160|hdz=10202.070|uh=5068|ud=20584|bh=D85B|bd=55387}}
+* {{Han ref|kx=0111.190|dkj=00883|dj=0237.160|hdz=10202.070|uh=5068|ud=20584|bh=D85B|bd=55387}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
+
 # {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[し]] (shi)|kun=[[そろわない]] (sorowanai)}}
+* {{ja-readings|on=[[し]] (shi)|kun=[[そろわない]] (sorowanai)}}
+
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=치|rv=chi|mr=ch'i}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[cī]] ([[ci1]])|wg=tz'u<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:偨]]
