--- a/en/愫/愫.15678.wikitext
+++ b/en/愫/愫.15678.wikitext
@@ -1,25 +1,41 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9509<sub>3</sub>|canj=心手一火 (PQMF)}}
+
 # [[guileless]], [[sincere]], [[honest]]
+
 ====References====
-{{Han ref|kx=0396.120|dkj=10986|dj=0734.190|hdz=42335.100|uh=612B|ud=24875|bh=DD68|bd=56680}}
+* {{Han ref|kx=0396.120|dkj=10986|dj=0734.190|hdz=42335.100|uh=612B|ud=24875|bh=DD68|bd=56680}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=sou3}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[そ]] (so)|kun=[[まこと]] (makoto)}}
+* {{ja-readings|on=[[そ]] (so)|kun=[[まこと]] (makoto)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[sù]] ([[su4]])|wg=su<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:愫]]
