--- a/en/愧/愧.15674.wikitext
+++ b/en/愧/愧.15674.wikitext
@@ -1,49 +1,64 @@
 {{see|媿}}
-
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=9601<sub>3</sub>|canj=心竹山戈 (PHUI)}}
+
 # [[ashamed]], conscience-stricken
+
 ====References====
-{{Han ref|kx=0396.080|dkj=10982|dj=0734.150|hdz=42329.110|uh=6127|ud=24871|bh=B75C|bd=46940}}
+* {{Han ref|kx=0396.080|dkj=10982|dj=0734.150|hdz=42329.110|uh=6127|ud=24871|bh=B75C|bd=46940}}
 
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=kwai3}}
+
 # {{defn|Cantonese}}
 
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[き]] (ki)|kun=[[はじる]] (hajiru)}}
+* {{ja-readings|on=[[き]] (ki)|kun=[[はじる]] (hajiru)}}
 
 ====Compounds====
-*[[愧死]]
-*[[愧色]]
+* [[愧死]]
+* [[愧色]]
 
 ----
+
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=괴|eumhun=|rv=goe|mr=koe|y=koy}}
+
 # {{defn|Korean}}
 
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[kuì]] ([[kui4]])|wg=k'uei<sup>4</sup>}}
+
 # {{defn|Mandarin}}
 
 ====Compounds====
-*[[愧对]]
-*[[愧恨]]
-*[[愧悔]]
-*[[愧疚]]
-*[[愧色]]
-*[[愧痛]]
+* [[愧对]]
+* [[愧恨]]
+* [[愧悔]]
+* [[愧疚]]
+* [[愧色]]
+* [[愧痛]]
 
 [[fr:愧]]
 [[li:愧]]
