--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -3,7 +3,8 @@
 {{rank|struck|man's|write|651|caught|below|window|instead}}
 
 ===Pronunciation===
-*{{IPA|/'kɔφt/}}, {{IPAchar|/kɑːt/}}
+*{{a|UK}} {{IPA|/kɔːt/}}
+*{{a|US}} {{IPAchar|/kɑːt/}}
 *{{audio|en-us-caught.ogg|Audio (US)}}
 *{{audio|en-us-inlandnorth-caught.ogg|Audio (US-Inland North)}}
 *{{audio|en-au-caught.ogg|Audio (Australia)}}
