--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -81,7 +81,7 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=[[성]]|eumhun=|rv=seong|mr=sŏng|y=seng}}
+{{ko-hanja|hangeul=[[성]]|rv=seong|mr=sŏng|y=seng|eumhun=별|ehrv=byeol|ehmr=byŏl|ehy=}}
 
 # {{defn|Korean}}
 
