--- a/en/坙/坙.13020.wikitext
+++ b/en/坙/坙.13020.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=一女女土 (MVVG)}}
+
 # {{defn|Han}}
+
 ====References====
-{{Han ref|kx=0226.101|dkj=04962|hdz=10422.120|uh=5759|ud=22361}}
+* {{Han ref|kx=0226.101|dkj=04962|hdz=10422.120|uh=5759|ud=22361}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=土04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[けい]] (kei)|kun=}}
+* {{ja-readings|on=[[けい]] (kei)|kun=}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jīng]] ([[jing1]])|wg=ching<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:坙]]
