--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -113,5 +113,6 @@
 [[pt:United States of America]]
 [[ro:United States of America]]
 [[ru:United States of America]]
+[[simple:United States of America]]
 [[fi:United States of America]]
 [[sv:United States of America]]
