/* Pronunciation */ Removed stress marker <came#4683512>

--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -4,7 +4,7 @@
 {{rank|those|own|old|106|came|men|come|without}}
 
 ===Pronunciation===
-*{{IPA|/'keɪm/}}, {{SAMPA|/"keIm/}}
+* {{IPA|/keɪm/}}, {{SAMPA|/keIm/}}
 *{{audio|en-us-came.ogg|Audio (US)}}
 *:{{rhymes|eɪm}}
 
