/* Pronunciation */ Merged pronunciation lines for consistency <find#4683537>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -6,9 +6,7 @@
 From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cognate with Dutch {{term|vinden}}, German {{term|finden}}, Swedish {{term|finna|lang=sv}}.
 
 ===Pronunciation===
-* {{enPR|fīnd}}
-* {{IPA|/faɪnd/}}
-* {{SAMPA|/faInd/}}
+* {{enPR|fīnd}}, {{IPA|/faɪnd/}}, {{SAMPA|/faInd/}}
 * {{audio|en-us-find.ogg|Audio (US)}}
 * Rhymes: [[Rhymes:English:-aɪnd|-aɪnd]]
 
