/* Translations */ +Czech <choose#4696427>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -36,6 +36,7 @@ From Old English [[ceosan|ċēosan]].
 * [[Catalan]]: [[escollir]], [[elegir]], [[triar]]
 * Chinese: [[選舉]], [[选举]] (xuǎnjǔ)
 * Croatian: {{t-|hr|izabrati}}, {{t|hr|odabrati}}
+* Czech: [[volit]], [[zvolit]]
 * Danish: [[vælge]], [[kåre]]
 * Dutch: {{t+|nl|kiezen}}, {{t+|nl|verkiezen}}
 * Esperanto: {{t-|eo|elekti|xs=Esperanto}}
