--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -14,6 +14,16 @@
 # {{simple past of|[[come]]}} 
 # {{simple past of|[[cum]]}}
 
+====Translations====
+{{trans-top|simple past of come}}
+{{trans-mid}}
+* Scottish Gaelic: {{t|gd| thàinig}}
+{{trans-bottom}}
+
+{{trans-top|simple past of cum}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ===Anagrams===
 *[[acme]]
 *[[mace]]
