--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -5,19 +5,19 @@
 
 ===Pronunciation===
 * {{IPA|/keɪm/}}, {{SAMPA|/keIm/}}
-*{{audio|en-us-came.ogg|Audio (US)}}
-*:{{rhymes|eɪm}}
+* {{audio|en-us-came.ogg|Audio (US)}}
+*: {{rhymes|eɪm}}
 
 ===Verb===
 '''came'''
 
-# {{simple past of|[[come]]}} 
+# {{simple past of|[[come]]}}
 # {{simple past of|[[cum]]}}
 
 ====Translations====
 {{trans-top|simple past of come}}
+* [[Scottish Gaelic]]: {{t|gd| thàinig}}
 {{trans-mid}}
-* Scottish Gaelic: {{t|gd| thàinig}}
 {{trans-bottom}}
 
 {{trans-top|simple past of cum}}
@@ -25,11 +25,11 @@
 {{trans-bottom}}
 
 ===Anagrams===
-*[[acme]]
-*[[mace]]
+* [[acme]]
+* [[mace]]
 
-[[Category:English irregular simple past forms]]
 [[Category:200 English basic words]]
+[[Category:English irregular simple past forms]]
 
 [[de:came]]
 [[el:came]]
