/* Translations */ <New Zealand#4712591>

--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -37,7 +37,7 @@ From Dutch '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlement in
 * Indonesian: [[Selandia Baru]]
 * [[Interlingua]]: [[Nove Zelanda]]
 * Italian: {{t+|it|Nuova Zelanda|f}}
-{{mid}}
+{{trans-mid}}
 * Japanese: [[ニュージーランド]], [[新西蘭]] (Nyū Jīrando)
 * Korean: [[뉴질랜드]] (nyujillaendeu)
 * Latin: [[Nova Zelandia]] {{f}}
