/* Synonyms */ sp <et cetera#4719954>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -29,7 +29,7 @@ From Latin phrase ''[[#Latin|et cetera]]'', meaning “and the rest”
 * Abbreviated as [[etc.]]; formerly also as [[&c.]].
 
 ====Synonyms====
-*{{sense|to complete a list}} [[at al.]]
+*{{sense|to complete a list}} [[et al.]]
 *{{sense|and so forth}} [[blah blah]] {{a|colloquial}}
 
 ====Translations====
