/* Synonyms */ [[and so on]] <et cetera#4719965>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -30,7 +30,7 @@ From Latin phrase ''[[#Latin|et cetera]]'', meaning “and the rest”
 
 ====Synonyms====
 *{{sense|to complete a list}} [[et al.]]
-*{{sense|and so forth}} [[blah blah blah]] {{a|colloquial}}
+*{{sense|and so forth}} [[and so on]], [[blah blah blah]] {{a|colloquial}}
 
 ====Translations====
 {{trans-top|and so on}}
