/* Translations */ *Czech <icon#4728272>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -42,7 +42,7 @@ From {{L.}} '''[[#Latin|icon]]''' < {{AGr.}} '''{{polytonic|[[εἰκών]]}}'''
 
 {{trans-top|religious painting}}
 * Bosnian: [[ikona#Bosnian|ikona]] {{f}}
-* Czech: [[icona]] {{f}}
+* Czech: [[ikona]] {{f}}
 * Dutch: [[icoon]] {{n}}
 * Finnish: [[ikoni]]
 * Greek: [[εικόνα]] [iˈko̞na] {{f}}, [[εικόνισμα]] [iˈko̞niˌzma] {{n}}
@@ -72,7 +72,7 @@ From {{L.}} '''[[#Latin|icon]]''' < {{AGr.}} '''{{polytonic|[[εἰκών]]}}'''
 
 {{trans-top|small picture, computer icon}}
 * Bosnian: [[ikona#Bosnian|ikona]] {{f}}
-* Czech: [[icona]] {{f}}
+* Czech: [[ikona]] {{f}}
 * Dutch: [[icoon]], [[pictogram]] {{n}}
 * Finnish: [[kuvake]]
 * Greek: [[εικονίδιο]] [iko̞ˈniðiˌo̞] {{n}}
