--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -86,6 +86,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Hungarian: [[görbe]]
 * Italian: [[curva]] {{f}}
 * Japanese: [[曲線]] ([[きょくせん]], kyokusen)
+* Russian: {{t|ru|кривая|tr=krivája|f}}
 * Slovene: [[krivulja]] {{f}}
 * Swedish: [[kurva]] {{c}}
 {{trans-bottom}}
@@ -102,8 +103,8 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{trans-top|informal: attractive shape of a woman's body}}
 <!--Note: put INFORMAL translations in this table, where these exist-->
 * [[Afrikaans]]: [[kurwe]]
-* [[Catalan]]: corbes, {{f|p}}
-* Dutch: [[rondingen]] ''m, pl'', [[figuur]] {{f}}
+* [[Catalan]]: [[corbes]] {{f|p}}
+* Dutch: [[rondingen]] {{m|p}}, [[figuur]] {{f}}
 * Finnish: [[kurvi]] (''usually in plural'' kurvit),
 {{trans-mid}}
 * Italian: [[curva]] {{f}} (''usually plural'')
