--- a/en/均/均.13002.wikitext
+++ b/en/均/均.13002.wikitext
@@ -1,51 +1,72 @@
 {{stroke order|strokes=7}}
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=4712<sub>0</sub>|canj=土心戈一 (GPIM), 土心一一 (GPMM)}}
+
 # [[equal]], [[even]], [[fair]]
 # [[all]], [[also]]
 # key, pitch (in Chinese music)
+
 ====References====
-{{Han ref|kx=0224.310|dkj=04916|dj=0459.200|hdz=10425.060|uh=5747|ud=22343|bh=A7A1|bd=42913}}
+* {{Han ref|kx=0224.310|dkj=04916|dj=0459.200|hdz=10425.060|uh=5747|ud=22343|bh=A7A1|bd=42913}}
+
 ----
+
 ==Cantonese==
+
 ===Hanzi===
 {{yue-hanzi|jyut=|y=gwan1}}
+
 # {{defn|Cantonese}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=5|rs=土04}}
+
 # [[gentle]]
 # [[equalize]]
-# [[equally]] 
+# [[equally]]
+
 ====Readings====
-{{ja-readings|on=[[きん]] (kin), [[いん]] (in), [[うん]] (un)|kun=[[ととのえる]] (totonoeru), [[ひとしい]] (hitoshii)|nadzuke=[[お]] (o), [[ただ]] (tada), [[なお]] (nao), [[なり]] (nari), [[ひとし]] (hitoshi), [[ひら]] (hira), [[まさ]] (masa)}}
+* {{ja-readings|on=[[きん]] (kin), [[いん]] (in), [[うん]] (un)|kun=[[ととのえる]] (totonoeru), [[ひとしい]] (hitoshii)|nadzuke=[[お]] (o), [[ただ]] (tada), [[なお]] (nao), [[なり]] (nari), [[ひとし]] (hitoshi), [[ひら]] (hira), [[まさ]] (masa)}}
+
 ====Compounds====
 {{top4}}
-*[[均一]]
-*[[均衡]]
+* [[均一]]
+* [[均衡]]
 {{mid4}}
-*[[均輸法]]
-*[[均斉]]
+* [[均輸法]]
+* [[均斉]]
 {{mid4}}
-*[[均沾]]
-*[[均田]]
+* [[均沾]]
+* [[均田]]
 {{mid4}}
-*[[均等]]
+* [[均等]]
 {{bottom}}
+
 ====References====
 {{ja-kref|k=2249|s=8BCF|j=3651}}
+
 ----
 
 ==Korean==
+
 ===Hanja===
 {{ko-hanja|hangeul=균|rv=gyun|mr=kyun}}
+
 # {{defn|Korean}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[jūn]] ([[jun1]])|wg=chün<sup>1</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:均]]
