--- a/en/昖/昖.16958.wikitext
+++ b/en/昖/昖.16958.wikitext
@@ -1,20 +1,32 @@
 ==Translingual==
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=日金戈 (ACI)}}
+
 # {{defn|Han|sort=日04}}
+
 ====References====
-{{Han ref|kx=0492.080|dkj=13819|dj=0855.050|hdz=21491.060|uh=6616|ud=26134}}
+* {{Han ref|kx=0492.080|dkj=13819|dj=0855.050|hdz=21491.060|uh=6616|ud=26134}}
+
 ----
+
 ==Japanese==
+
 ===Kanji===
 {{ja-kanji|grade=|rs=日04}}
-# {{defn|Japanese}} 
+
+# {{defn|Japanese}}
+
 ====Readings====
-{{ja-readings|on=[[えん]] (en)|kun=[[めぐる]] (meguru)}}
+* {{ja-readings|on=[[えん]] (en)|kun=[[めぐる]] (meguru)}}
+
 ----
+
 ==Mandarin==
+
 ===Hanzi===
 {{cmn-hanzi|pin=[[yán]] ([[yan2]])|wg=yen<sup>2</sup>}}
+
 # {{defn|Mandarin}}
 
 [[fr:昖]]
