--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -40,7 +40,7 @@
 
 ====Related terms====
 * [[beauty]]
-** See also [[Wikisaurus:Jared Kincaid Winant]]
+** See also [[Wikisaurus:beautiful woman]]
 
 ====Translations====
 {{trans-top|possessing charm and attractive}}
