clean up notes <明#4740932>

--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -1,4 +1,3 @@
-{{rfc|References as level 2 header}}
 ==Translingual==
 
 ===Etymology===
@@ -17,6 +16,10 @@ However, some older forms of the character have a more complex form, and show a 
 
 ====References====
 * {{Han ref|kx=0491.120|dkj=13805|dj=0852.180|hdz=21491.080|uh=660E|ud=26126|bh=A9FA|bd=43514}}
+
+====Notes====
+<references/>
+
 
 ----
 
@@ -143,9 +146,6 @@ However, some older forms of the character have a more complex form, and show a 
 {{vi-hantu|[[minh]]}}
 
 # {{defn|Vietnamese}}
-
-==References==
-<references/>
 
 [[es:明]]
 [[fr:明]]
