checktrans and trans-top to checktrans-top <cut#4750721>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -62,8 +62,7 @@ from {{Ger.}} *{{term||kut-}} , or from {{OF.}} {{term||couteau|knife}}
 {{trans-mid}}
 {{trans-bottom}}
 
-{{checktrans}}
-{{trans-top|Translations to be checked}}
+{{checktrans-top}}
 * {{ttbc|Dutch}}: [[besneden]]
 {{trans-mid}}
 {{trans-bottom}}
@@ -318,8 +317,7 @@ from {{Ger.}} *{{term||kut-}} , or from {{OF.}} {{term||couteau|knife}}
 * Italian: {{t+|it|alzare}}
 {{trans-bottom}}
 
-{{checktrans}}
-{{trans-top|translations to be checked}}
+{{checktrans-top}}
 * {{ttbc|Albanian}}: [[pret]]
 * {{ttbc|Bulgarian}}: [[сека]]
 * {{ttbc|Catalan}}: [[tallar]]
