--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -107,7 +107,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 * [[Rohingya]]: [[ai]]
 * Romanian: [[veni]]
 * [[Romansch]]: [[vegnir]]
-* Russian: [[приходить]] / [[прийти]] (prikhodít’, prijtí)
+* Russian: {{t|ru|приходить}} / {{t|ru|прийти}} (prixodít’, prijtí)
 * [[Scottish Gaelic]]: [[thig]]
 * Slovene: [[priti]]
 * Spanish: [[venir]]
@@ -125,6 +125,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 {{trans-mid}}
 * Italian: [[venire]]
 * Polish: [[dochodzić]] / [[dojść]]
+* Russian: {{t|ru|кончать|tr=končát’}}
 {{trans-bottom}}
 
 {{trans-top|(come at) To attack}}
