--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -13,16 +13,16 @@ From {{OF.}} ''[[poulser]]'' (modern ''[[pousser]]''), from {{L.}} ''[[pulsare]]
 {{en-verb|push|es}}
 
 # {{transitive}} To apply a [[force]] to (an object) such that it moves [[away]] from the person or thing applying the force.
-#: ''In his anger he pushed me against the wall and threatened me.''
+#: ''In his anger, he was about to '''push''' me against the wall and threaten me.''
 # {{transitive}} To continually attempt to persuade (a person) into a particular course of action.
 # {{transitive}} To continually attempt to promote (a point of view).
-#: ''Stop '''pushing''' the issue &mdash; I'm not interested.''
+#: ''Don't '''push''' the issue &mdash; I'm not interested.''
 # {{transitive}} To [[promote]] a [[product]] with the intention of [[sell]]ing it.
-#: ''They're '''pushing''' that perfume again.''
-#: ''There were two men hanging around the school gates today, '''pushing''' drugs.''
+#: ''We plan to '''push''' that perfume again.''
+#: ''There were two men hanging around the school gates today trying to '''push''' drugs.''
 # {{context|informal|transitive}} To [[approach]]; to come close to.
-#: ''My old car is '''pushing''' 250,000 miles.''
-#: ''He's pushing sixty.'' (= ''he's nearly sixty years old'')
+#: ''My old car will soon '''push''' 250,000 miles.''
+#: ''He will soon '''push''' sixty.'' (= ''He will soon near sixty years old.'')
 # {{intransitive}} To apply a [[force]] to an object such that it moves [[away]] from the person applying the force.
 #: ''You need to '''push''' quite hard to get this door open.''
 # {{intransitive}} To tense the muscles in the [[abdomen]] in order to [[expel]] its contents.
