--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -63,6 +63,7 @@ Originally from {{He.}} ''[[ישראל]]'', the name "Israel" is rooted in the [
 {{trans-mid}}
 * Italian: {{t+|it|Israele}}
 * Japanese: {{t+|ja|イスラエル|tr=isuraeru|sc=Jpan}}
+* Kannada: [[ಇಸ್ರೇಲ್]]
 * [[Livonian]]: [[Izraēl]], [[Jūdõmō]]
 * [[Macedonian]]: [[Израел]] {{m}}
 * Maltese: [[Iżrael]]
