--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -91,6 +91,7 @@ From {{OF.}} ''[[branche]]''.
 {{trans-bottom}}
 
 {{trans-top|an area in business or of knowledge, research}}
+* Dutch: {{t|nl|branch}} (of business), {{t|nl|bedrijfstak}} (of business), {{t|nl|vakgebied}} (of knowledge)
 * Finnish: {{t+|fi|ala}}
 * German: {{t+|de|Branche|f}} (of business)
 * Italian: {{t+|it|branca|f}}
