--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -161,6 +161,7 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 ====Translations====
 {{trans-top|to be on or from the border of}}
 * Bosnian: [[graničiti se]]
+* Dutch: [[begrenzen]]
 * Finnish: {{t-|fi|ympäröidä}}, {{t|fi|reunustaa}}
 * German: [[umgehen]], [[umrunden]]
 * [[Interlingua]]: [[costear]], [[contornar]]
