template -ttbc-top +checktrans-top <secretary#4784944>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -95,7 +95,7 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 * Spanish: {{t-|es|serpentario|m}}
 {{trans-bottom}}
 
-{{ttbc-top}}
+{{checktrans-top}}
 * {{ttbc|Indonesian}}: [[sekretaris]]
 * {{ttbc|Interlingua}}: [[secretario]] {{m}}, [[scriptorio]]
 * {{ttbc|Italian}}: [[segretario]] {{m}}, [[segretaria]] {{f}}
