--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology 1===
-''Chiefly British'', through ''French'' "Espeller" and dialect nuance.
+''Chiefly British'', through ''French'' [[espeller]] and dialect nuance.
 
 ====Alternative spellings====
 *[[spelled]]
