/* Etymology 2 */ pl <spelt#4788904>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -20,9 +20,11 @@
 *:Yes, yes; he teaches boys the hornbook. What is a, b, '''spelt''' / backward with the horn on his head?
 
 ===Etymology 2===
+{{rfe}} 
+
 ====Pronunciation====
 *{{IPA|/'spεlt/}}
-*:Rhymes: [[Rhymes:English:-ɛlt|-ɛlt]]
+*Rhymes: [[Rhymes:English:-ɛlt|-ɛlt]]
 
 ====Noun====
 {{en-noun|-}}
@@ -37,7 +39,8 @@
 * Hungarian: {{t|hu|tönkölybúza}}
 {{trans-bottom}}
 
-----
+=====See also=====
+{{pedialite}}
 
 ==Dutch==
 
